# datadog-metrics-example

./: .envrc.example  pyproject.toml  readme.md
datadog_metrics_example/: publish.py
tests/: test_datadog_metrics_example.py
