[tool.poetry]
name = "datadog-metrics-example"
version = "0.1.0"
description = ""
authors = ["James Carr <james.r.carr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
datadog = "^0.41.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
publish = "datadog_metrics_example.publish:submit"
